--- a/index.html
+++ b/index.html
@@ -12,10 +12,31 @@
             <h1>Hello HTML101</h1>
         </header>
         <nav>
+            <ul>
+                <li> href="/">Home</a></li>
+                <li> href="/about.html">about</li>
+                <li> href="/contact.html">contact</a></li>
+                <li> href="https://google.com">services</a></li>
+            </ul>
             Navigation Area
         </nav>
     </div>
+        Hi
         Main content Area
+        <p> this is a paragraph inside the main content aree.</p>
+        <h2>คณะวิทยาศาสตร์</h2>
+        <p>สาขาวิชาวิทยาการคอม</p>
+        <h3>ตารางรายชื่อนักศึกษา</h3>
+        <table border="1">
+        <thead>
+            <tr>
+            <h3>ข่าว 1</h3>
+        </div>
+        </div>
+            <h3>ข่าว 2</h3>
+        </div>
+        </div>
+            <h3>ข่าว 3</h3>    
     </div>
 
         </footer>
