--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     </div>    
         <header>
-            <h1>Hello HTML101</h1>
+            <h1>Halooo</h1>
         </header>
         <nav>
             <ul>
@@ -21,11 +21,12 @@
             Navigation Area
         </nav>
     </div>
+        <img src="img/images.png" alt="pornhub" width="1000" height="1000"
         Hi
         Main content Area
         <p> this is a paragraph inside the main content aree.</p>
         <h2>คณะวิทยาศาสตร์</h2>
-        <p>สาขาวิชาวิทยาการคอม</p>
+        <p>สาขาวิชาวิทยาการคอมพิวเตอร์</p>
         <h3>ตารางรายชื่อนักศึกษา</h3>
         <table border="1">
         <thead>
